<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:background="@color/backgroundWhite"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activities.MainActivity">

    <TextView
        android:id="@+id/gameName"
        android:layout_width="wrap_content"
        android:layout_height="128dp"
        android:layout_marginTop="32dp"
        android:gravity="center"
        android:text="@string/theHat"
        android:textColor="@color/textBlack"
        android:textSize="64sp"
        android:typeface="monospace"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/oneToOthersButton"
        android:layout_width="228dp"
        android:layout_height="56dp"
        android:layout_marginTop="24dp"
        android:background="@color/buttonBackgroundBlack"
        android:text="@string/one_to_others"
        android:textColor="@color/buttonTextWhite"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/gameName" />

    <Button
        android:id="@+id/offlineGameButton"
        android:layout_width="228dp"
        android:layout_height="56dp"
        android:layout_marginTop="16dp"
        android:text="@string/offline_game"
        android:textColor="@color/buttonTextWhite"
        android:background="@color/buttonBackgroundBlack"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/oneToOthersButton" />

    <Button
        android:id="@+id/onlineGameButton"
        android:layout_width="228dp"
        android:layout_height="56dp"
        android:layout_marginTop="16dp"
        android:text="@string/online_game"
        android:textColor="@color/buttonTextWhite"
        android:background="@color/buttonBackgroundBlack"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/offlineGameButton" />

    <Button
        android:id="@+id/settingsButton"
        android:layout_width="228dp"
        android:layout_height="56dp"
        android:layout_marginTop="16dp"
        android:text="@string/settings"
        android:textColor="@color/buttonTextWhite"
        android:background="@color/buttonBackgroundBlack"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/onlineGameButton" />

    <Button
        android:id="@+id/manageDictionariesButton"
        android:layout_width="228dp"
        android:layout_height="56dp"
        android:layout_marginTop="16dp"
        android:text="@string/manage_dictionaries"
        android:textColor="@color/buttonTextWhite"
        android:background="@color/buttonBackgroundBlack"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/settingsButton" />


</android.support.constraint.ConstraintLayout>