<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    style="@style/activityStyle"
    tools:context=".activities.game.GameActivity">

    <Button
        android:id="@+id/okButton"
        android:layout_width="140dp"
        android:layout_height="128dp"
        android:layout_marginStart="24dp"
        android:layout_marginBottom="24dp"
        style="@style/darkButtonStyle"
        android:text="@string/ok"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:id="@+id/errorButton"
        android:layout_width="140dp"
        android:layout_height="60dp"
        android:layout_marginEnd="24dp"
        android:layout_marginBottom="8dp"
        android:text="@string/error"
        style="@style/darkButtonStyle"
        app:layout_constraintBottom_toTopOf="@+id/skipButton"
        app:layout_constraintEnd_toEndOf="parent" />

    <Button
        android:id="@+id/skipButton"
        android:layout_width="140dp"
        android:layout_height="60dp"
        android:layout_marginEnd="24dp"
        android:layout_marginBottom="24dp"
        android:text="@string/skip"
        style="@style/darkButtonStyle"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

    <TextView
        android:id="@+id/remainingTime"
        android:layout_width="96dp"
        android:layout_height="48dp"
        android:layout_marginStart="24dp"
        android:layout_marginTop="24dp"
        android:textSize="24sp"
        android:textColor="@color/textBlack"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:textSize="18sp" />

    <TextView
        android:id="@+id/currentWord"
        android:layout_width="280dp"
        android:layout_height="64dp"
        android:gravity="center"
        android:textColor="@color/textBlack"
        app:autoSizeTextType="uniform"
        app:autoSizeMinTextSize="10sp"
        app:autoSizeMaxTextSize="100sp"
        app:autoSizeStepGranularity="1sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.4" />

</android.support.constraint.ConstraintLayout>